refactor: implement dependency injection
