# api/swagger.yaml
@@ -19,7 +19,15 @@ components:
       description: HTTP-only refresh token cookie for getting new access tokens
     
   schemas:
-    Error:
+    InputError:
+      type: object
+      properties:
+        error:
+          type: string
+      required:
+        - error
+
+    AppError:
       type: object
       properties:
         code:
@@ -33,8 +41,8 @@ components:
         - code
         - message
         - timestamp
-    
-    UserResponse:
+  
+    User:
       type: object
       properties:
         id:
@@ -69,11 +77,75 @@ components:
         - created_at
         - updated_at
 
+  responses:
+    Unauthorized:
+      description: Unauthorized - Authentication required
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/AppError'
+          examples:
+            invalid_access_token:
+              summary: Invalid access token
+              value:
+                code: "401_01_006"
+                message: "Invalid access token"
+                timestamp: "1970-01-01T00:00:00Z"
+            invalid_token_issuer:
+              summary: Invalid token issuer
+              value:
+                code: "401_01_007"
+                message: "Invalid token issuer"
+                timestamp: "1970-01-01T00:00:00Z"
+            invalid_auth_header:
+              summary: Invalid authorization header
+              value:
+                code: "401_01_008"
+                message: "Invalid authorization header"
+                timestamp: "1970-01-01T00:00:00Z"
+    BadRequest:
+      description: Invalid input data
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/InputError'
+          example:
+            error: "invalid request body | ..."
+
+    UserNotAuthorized:
+      description: User not authorized
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/AppError'
+          example:
+            code: "403_01_011"
+            message: "User not authorized"
+            timestamp: "1970-01-01T00:00:00Z"
+    UserNotFound:
+      description: User not found
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/AppError'
+          example:
+            code: "404_01_001"
+            message: "User not found"
+            timestamp: "1970-01-01T00:00:00Z"
+    UserEmailInUse:
+      description: User email already in use
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/AppError'
+          example:
+            code: "409_01_009"
+            message: "User email already in use"
+            timestamp: "1970-01-01T00:00:00Z"
+
 paths:
   /healthz:
     get:
-      summary: Health check
-      description: Check if the service is running
       tags:
         - Tool
       responses:
@@ -90,8 +162,6 @@ paths:
     
   /unix-timestamp:
     get:
-      summary: Get Unix timestamp
-      description: Get the current Unix timestamp
       tags:
         - Tool
       responses:
@@ -105,8 +175,6 @@ paths:
 
   /jwt:
     post:
-      summary: Generate JWT
-      description: Generate a JWT
       tags:
         - Tool
       requestBody:
@@ -154,10 +222,9 @@ paths:
 
   /auth/login:
     get:
-      summary: Initiate Google OAuth login
-      description: Redirects user to Google OAuth for authentication
+      summary: Redirect to Google OAuth for authentication
       tags:
-        - User
+        - Auth
       responses:
         '302':
           description: Redirect to Google OAuth
@@ -170,10 +237,9 @@ paths:
 
   /auth/callback:
     get:
-      summary: OAuth callback handler
-      description: Handle OAuth callback, check if user exists, and issue JWT tokens
+      summary: Handle OAuth callback, and issue access token and refresh token
       tags:
-        - User
+        - Auth
       parameters:
         - name: code
           in: query
@@ -204,33 +270,16 @@ paths:
                     type: string
                     description: JWT access token
                     example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+        '403':
+          $ref: '#/components/responses/UserNotAuthorized'
         '404':
-          description: User not found in system
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-              example:
-                code: "404_01_001"
-                message: "User not found"
-                timestamp: "1970-01-01T00:00:00Z"
-        '400':
-          description: Invalid or expired OAuth code
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-              example:
-                code: "500_01_002"
-                message: "Invalid or expired OAuth code"
-                timestamp: "1970-01-01T00:00:00Z"
+          $ref: '#/components/responses/UserNotFound'
         '500':
           description: OAuth processing error
           content:
             application/json:
               schema:
-                oneOf:
-                  - $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/AppError'
               examples:
                 invalid_oauth_code:
                   summary: Invalid OAuth Code
@@ -238,7 +287,7 @@ paths:
                     code: "500_01_002"
                     message: "Invalid OAuth Code"
                     timestamp: "1970-01-01T00:00:00Z"
-                invalid_id_token:
+                invalid_oauth_id_token:
                   summary: Invalid OAuth ID token
                   value:
                     code: "500_01_003"
@@ -253,10 +302,9 @@ paths:
 
   /auth/refresh:
     post:
-      summary: Refresh access token
-      description: Validate refresh token from cookie and issue new access token
+      summary: Refresh access token using refresh token
       tags:
-        - User
+        - Auth
       security:
         - userRefreshToken: []
       responses:
@@ -276,8 +324,7 @@ paths:
           content:
             application/json:
               schema:
-                oneOf:
-                  - $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/AppError'
               examples:
                 invalid_refresh_token:
                   summary: Invalid refresh token
@@ -297,54 +344,24 @@ paths:
                     code: "401_01_008"
                     message: "Invalid authorization header"
                     timestamp: "1970-01-01T00:00:00Z"
+        '403':
+          $ref: '#/components/responses/UserNotAuthorized'
+        '404':
+          $ref: '#/components/responses/UserNotFound'
 
   /auth/verify:
     post:
       summary: Verify access token
       description: Validate access token and return user information for microservice-to-microservice authentication
       tags:
-        - User
+        - Auth
       security:
         - userAccessToken: []
       responses:
         '204':
-          description: Token is valid
+          description: Access token is valid
         '401':
-          description: Authentication error
-          content:
-            application/json:
-              schema:
-                oneOf:
-                  - $ref: '#/components/schemas/Error'
-              examples:
-                invalid_access_token:
-                  summary: Invalid access token
-                  value:
-                    code: "401_01_006"
-                    message: "Invalid access token"
-                    timestamp: "1970-01-01T00:00:00Z"
-                invalid_token_issuer:
-                  summary: Invalid token issuer
-                  value:
-                    code: "401_01_007"
-                    message: "Invalid token issuer"
-                    timestamp: "1970-01-01T00:00:00Z"
-                invalid_auth_header:
-                  summary: Invalid authorization header
-                  value:
-                    code: "401_01_008"
-                    message: "Invalid authorization header"
-                    timestamp: "1970-01-01T00:00:00Z"
-        '403':
-          description: Forbidden
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-              example:
-                code: "403_01_011"
-                message: "User not authorized"
-                timestamp: "1970-01-01T00:00:00Z"
+          $ref: '#/components/responses/Unauthorized'
 
   /users:
     get:
@@ -362,43 +379,9 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/UserResponse'
+                  $ref: '#/components/schemas/User'
         '401':
-          description: Authentication error
-          content:
-            application/json:
-              schema:
-                oneOf:
-                  - $ref: '#/components/schemas/Error'
-              examples:
-                invalid_access_token:
-                  summary: Invalid access token
-                  value:
-                    code: "401_01_006"
-                    message: "Invalid access token"
-                    timestamp: "1970-01-01T00:00:00Z"
-                invalid_token_issuer:
-                  summary: Invalid token issuer
-                  value:
-                    code: "401_01_007"
-                    message: "Invalid token issuer"
-                    timestamp: "1970-01-01T00:00:00Z"
-                invalid_auth_header:
-                  summary: Invalid authorization header
-                  value:
-                    code: "401_01_008"
-                    message: "Invalid authorization header"
-                    timestamp: "1970-01-01T00:00:00Z"
-        '403':
-          description: Forbidden
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-              example:
-                code: "403_01_011"
-                message: "User not authorized"
-                timestamp: "1970-01-01T00:00:00Z"
+          $ref: '#/components/responses/Unauthorized'
     
     post:
       summary: Create new user
@@ -421,60 +404,26 @@ paths:
                   format: email
                   example: "user@example.com"
       responses:
-        '201':
+        '204':
           description: User created successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
         '401':
-          description: Authentication error
-          content:
-            application/json:
-              schema:
-                oneOf:
-                  - $ref: '#/components/schemas/Error'
-              examples:
-                invalid_access_token:
-                  summary: Invalid access token
-                  value:
-                    code: "401_01_006"
-                    message: "Invalid access token"
-                    timestamp: "1970-01-01T00:00:00Z"
-                invalid_token_issuer:
-                  summary: Invalid token issuer
-                  value:
-                    code: "401_01_007"
-                    message: "Invalid token issuer"
-                    timestamp: "1970-01-01T00:00:00Z"
-                invalid_auth_header:
-                  summary: Invalid authorization header
-                  value:
-                    code: "401_01_008"
-                    message: "Invalid authorization header"
-                    timestamp: "1970-01-01T00:00:00Z"
-        '403':
-          description: Forbidden
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-              example:
-                code: "403_01_011"
-                message: "User not authorized"
-                timestamp: "1970-01-01T00:00:00Z"
+          $ref: '#/components/responses/Unauthorized'
         '409':
-          description: User already exists
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-              example:
-                code: "409_01_009"
-                message: "User already exists"
-                timestamp: "1970-01-01T00:00:00Z"
+          $ref: '#/components/responses/UserEmailInUse'
 
   /users/{id}:
+    parameters:
+      - name: id
+        in: path
+        description: User ID
+        required: true
+        schema:
+          type: integer
+          format: int64
+          example: 1
+ 
     patch:
       summary: Update user
       description: Update user information by ID
@@ -482,15 +431,6 @@ paths:
         - User
       security:
         - userAccessToken: []
-      parameters:
-        - name: id
-          in: path
-          description: User ID
-          required: true
-          schema:
-            type: integer
-            format: int64
-            example: 1
       requestBody:
         required: true
         content:
@@ -503,68 +443,18 @@ paths:
                   format: email
                   example: "user@example.com"
       responses:
-        '200':
+        '204':
           description: User updated successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
         '401':
-          description: Authentication error
-          content:
-            application/json:
-              schema:
-                oneOf:
-                  - $ref: '#/components/schemas/Error'
-              examples:
-                invalid_access_token:
-                  summary: Invalid access token
-                  value:
-                    code: "401_01_006"
-                    message: "Invalid access token"
-                    timestamp: "1970-01-01T00:00:00Z"
-                invalid_token_issuer:
-                  summary: Invalid token issuer
-                  value:
-                    code: "401_01_007"
-                    message: "Invalid token issuer"
-                    timestamp: "1970-01-01T00:00:00Z"
-                invalid_auth_header:
-                  summary: Invalid authorization header
-                  value:
-                    code: "401_01_008"
-                    message: "Invalid authorization header"
-                    timestamp: "1970-01-01T00:00:00Z"
+          $ref: '#/components/responses/Unauthorized'
         '403':
-          description: Forbidden
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-              example:
-                code: "403_01_011"
-                message: "User not authorized"
-                timestamp: "1970-01-01T00:00:00Z"
+          $ref: '#/components/responses/Forbidden'
         '404':
-          description: User not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-              example:
-                code: "404_01_001"
-                message: "User not found"
-                timestamp: "1970-01-01T00:00:00Z"
+          $ref: '#/components/responses/UserNotFound'
         '409':
-          description: Email already in use
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-              example:
-                code: "409_01_010"
-                message: "Email already in use"
-                timestamp: "1970-01-01T00:00:00Z"
+          $ref: '#/components/responses/UserEmailInUse'
     
     delete:
       summary: Delete user
@@ -573,61 +463,12 @@ paths:
         - User
       security:
         - userAccessToken: []
-      parameters:
-        - name: id
-          in: path
-          description: User ID
-          required: true
-          schema:
-            type: integer
-            format: int64
-            example: 1
       responses:
         '204':
           description: User deleted successfully
+        '400':
+          $ref: '#/components/responses/BadRequest'
         '401':
-          description: Authentication error
-          content:
-            application/json:
-              schema:
-                oneOf:
-                  - $ref: '#/components/schemas/Error'
-              examples:
-                invalid_access_token:
-                  summary: Invalid access token
-                  value:
-                    code: "401_01_006"
-                    message: "Invalid access token"
-                    timestamp: "1970-01-01T00:00:00Z"
-                invalid_token_issuer:
-                  summary: Invalid token issuer
-                  value:
-                    code: "401_01_007"
-                    message: "Invalid token issuer"
-                    timestamp: "1970-01-01T00:00:00Z"
-                invalid_auth_header:
-                  summary: Invalid authorization header
-                  value:
-                    code: "401_01_008"
-                    message: "Invalid authorization header"
-                    timestamp: "1970-01-01T00:00:00Z"
-        '403':
-          description: Forbidden
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-              example:
-                code: "403_01_011"
-                message: "User not authorized"
-                timestamp: "1970-01-01T00:00:00Z"
+          $ref: '#/components/responses/Unauthorized'
         '404':
-          description: User not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-              example:
-                code: "404_01_001"
-                message: "User not found"
-                timestamp: "1970-01-01T00:00:00Z"
+          $ref: '#/components/responses/UserNotFound'
